2007-05-10  Pavel Hanak  <hanak@asellus.cz>

	* pytis/form/configui.py (_ConfigData): All data methods take also
	the argument `transaction'.

	* pytis/form/inputfield.py (CodebookField._on_codebook_insert):
	Use transaction for codebook form.

	* pytis/form/form.py (PopupForm.run): Commit transaction only if
	the form was commited.
	(__init__): Initialization of transaction moved to `set_row'.
	(PopupEditForm.set_row): New method.
	(PopupEditForm._on_next_button): Reinitialize transaction if needed.

2007-05-10  Milan Zamazal  <pdm@brailcom.org>

	* pytis/form/dialog.py (db_operation): Return values in proper
	order on failure.

2007-05-03  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py
	(DBDataPostgreSQL._pg_begin_transaction): If in select, close it first.
	
2007-05-03  Milan Zamazal  <pdm@brailcom.org>

	* pytis/form/event.py (top_level_exception): Print detailed
	traceback to log.

2007-05-03  Milan Zamazal  <pdm@brailcom.org>
	
	* pytis/data/postgresql.py
	(PostgreSQLStandardBindingHandler._pdbb_create_sql_commands.make_lock_command):
	Lock only the given row of the view.  If single row of a view
	can't be locked, don't lock at all.
	
	* pytis/data/_test.py (DBDataNotification.test_side_notification):
	See above.

2007-04-30  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/_test.py (DBDataNotification.test_side_notification):
	Don't require change counters to be initially 0.

	* pytis/data/data.py (Data.cacheable, MemData.cacheable): New
	methods.
	(DataFactory.create): Get the data object from cache if possible.

2007-04-27  Pavel Hanak  <hanak@asellus.cz>

	* pytis/presentation/spec.py (CbComputer._compute): Added support
	for user transactions.

	* pytis/presentation/field.py (PresentedRow.set_transaction): New
	method.  
	(PresentedRow.get_transaction): New method.

	* pytis/form/list.py: 'Transactions' support reworked.

	* pytis/form/inputfield.py: Save PresentedRow in the instance.
	Validate with given transaction.
