@@ -1571,7 +1571,11 @@ class DataFactory(object):
             except TypeError:
                 cacheable = False
                 log(EVENT, "Non-cacheable data object cache key: %s" % (key,))
-        if cacheable:
+        # TODO: We have still non-identified problems with enumerators
+        #       when using cache for data objects. So, for the moment, we
+        #       switch the cache off.
+        # if cacheable:
+        if False: 
             data_object = cache[key]
             result = copy.copy(data_object)
         else:
