@@ -1,5 +1,8 @@
 2007-05-10  Pavel Hanak  <hanak@asellus.cz>
 
+	* pytis/data/data.py (DataFactory.create): Don't use data object
+	cache, till we find out, what's wrong...
+
 	* pytis/form/configui.py (_ConfigData): All data methods take also
 	the argument `transaction'.
 
